# PeakRDL-regblock-vhdl

./: MANIFEST.in  README.md  hdl-src  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml
docs/: architecture.rst  configuring.rst  hwif.rst  index.rst  licensing.rst
docs/cpuif/: apb.rst  customizing.rst  wb.rst  wishbone.rst
src/peakrdl_regblock_vhdl/: __about__.py  __peakrdl__.py  addr_decode.py  dereferencer.py  exporter.py  forloop_generator.py  module_tmpl.vhd  package_tmpl.vhd  struct_generator.py  utils.py  validate_design.py  vhdl_int.py
src/peakrdl_regblock_vhdl/cpuif/: base.py
src/peakrdl_regblock_vhdl/cpuif/wb/: __init__.py  (+1 more)
src/peakrdl_regblock_vhdl/field_logic/: bases.py  generators.py  hw_interrupts.py  sw_onwrite.py
src/peakrdl_regblock_vhdl/hdl_src/: wb_intf_pkg.vhd  wishbone_intf_pkg.vhd
src/peakrdl_regblock_vhdl/hwif/: __init__.py  generators.py
src/peakrdl_regblock_vhdl/read_buffering/: __init__.py  implementation_generator.py
src/peakrdl_regblock_vhdl/readback/: generators.py  readback.py  readback_mux_generator.py
src/peakrdl_regblock_vhdl/udps/: signed.py
src/peakrdl_regblock_vhdl/write_buffering/: implementation_generator.py  storage_generator.py  template.vhd
tests/: .coveragerc  README.md  requirements.txt  run.sh
tests/hdl-src/: obi_intf.sv
tests/lib/: base_testcase.py  synth_testcase.py  tb_base.sv
tests/lib/cpuifs/: base.py
tests/lib/simulators/: base.py  questa.py
tests/lib/vhdl_adapter/: __init__.py  test_adapter_tmpl.sv  test_adapter_tmpl.vhd
tests/test_enum/: regblock.rdl  tb_template.sv
tests/test_field_types/: regblock.rdl  tb_template.sv
tests/test_fixedpoint/: regblock.rdl
tests/test_force_empty_hwif/: regblock.rdl  testcase.py
tests/test_parity/: tb_template.sv
tests/test_pkg_params/: regblock.rdl  tb_template.sv  testcase.py
tests/test_read_buffer/: regblock.rdl
tests/test_read_fanin/: tb_template.sv
tests/test_user_cpuif/: testcase.py
tests/test_write_buffer/: regblock.rdl
(+19 files in other folders)
